--- a/main_project/package.json
+++ b/main_project/package.json
@@ -24,8 +24,10 @@
     "ionic-native": "2.4.1",
     "ionicons": "3.0.0",
     "rxjs": "5.0.0-beta.12",
-    "zone.js": "0.6.26",
-    "sw-toolbox": "3.4.0"
+    "socket.io": "^1.7.2",
+    "socket.io-client": "^1.7.2",
+    "sw-toolbox": "3.4.0",
+    "zone.js": "0.6.26"
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.0.0",
@@ -40,5 +42,8 @@
     "ionic-plugin-keyboard"
   ],
   "cordovaPlatforms": [],
-  "description": "main_project: An Ionic project"
+  "description": "main_project: An Ionic project",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "ISC"
 }
